# random-fu

./: .boring  README  README.md  cabal.project  nixpkgs.nix  random-fu.cabal  release.nix  shell.nix  stack.yaml
.circleci/: config.yml
doc/haddock/: Data-Random-Distribution-Bernoulli.html  Data-Random-Distribution-Beta.html  Data-Random-Distribution-Binomial.html  Data-Random-Distribution-Categorical.html  Data-Random-Distribution-Dirichlet.html  Data-Random-Distribution-Exponential.html  Data-Random-Distribution-Gamma.html  Data-Random-Distribution-Multinomial.html  Data-Random-Distribution-Normal.html  Data-Random-Distribution-Poisson.html  Data-Random-Distribution-Rayleigh.html  Data-Random-Distribution-Triangular.html  Data-Random-Distribution-Uniform.html  Data-Random-Distribution-Weibull.html  Data-Random-Distribution-Ziggurat.html  Data-Random-Distribution.html  Data-Random-Internal-Find.html  Data-Random-Internal-Fixed.html  Data-Random-Internal-Primitives.html  Data-Random-Internal-TH.html  Data-Random-Internal-Words.html  Data-Random-Lift.html  Data-Random-List.html  Data-Random-RVar.html  Data-Random-Sample.html  Data-Random-Source-DevRandom.html  Data-Random-Source-MWC.html  Data-Random-Source-PureMT.html  Data-Random-Source-Std.html  Data-Random-Source-StdGen.html  Data-Random-Source.html  Data-Random.html  README  doc-index-D.html  doc-index-I.html  doc-index-L.html  doc-index-N.html  doc-index-P.html  doc-index-W.html  doc-index-Z.html  (+19 more)
doc/haddock/src/: Data-Random-Distribution-Bernoulli.html  Data-Random-Distribution-Categorical.html  Data-Random-Distribution-Exponential.html  Data-Random-Distribution-Rayleigh.html  Data-Random-Distribution-Triangular.html  Data-Random-Distribution-Weibull.html  Data-Random-Distribution-Ziggurat.html  Data-Random-Distribution.html  Data-Random-Internal-Words.html  Data-Random-Lift.html  Data-Random-List.html  Data-Random-RVar.html  Data-Random-Sample.html  Data-Random-Source-DevRandom.html  Data-Random-Source-MWC.html  Data-Random-Source-Std.html  Data-Random-Source-StdGen.html  Data-Random.html
random-fu/: changelog.md  default.nix  random-fu.cabal
random-fu/doc/haddock/: Data-Random-Distribution-Bernoulli.html  Data-Random-Distribution-Binomial.html  Data-Random-Distribution-Categorical.html  Data-Random-Distribution-Exponential.html  Data-Random-Distribution-Gamma.html  Data-Random-Distribution-Rayleigh.html  Data-Random-Distribution-Triangular.html  Data-Random-Distribution-Ziggurat.html  Data-Random-Internal-Words.html  Data-Random-Lift.html  Data-Random-RVar.html  doc-index-B.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-K.html  doc-index-M.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index.html  mini_Data-Random-Distribution-Beta.html  mini_Data-Random-Distribution-Categorical.html  mini_Data-Random-Distribution-Dirichlet.html  mini_Data-Random-Distribution-Exponential.html  mini_Data-Random-Distribution-Gamma.html  mini_Data-Random-Distribution-Multinomial.html  mini_Data-Random-Distribution-Triangular.html  mini_Data-Random-Internal-TH.html  mini_Data-Random-Internal-Words.html  mini_Data-Random-Lift.html  mini_Data-Random-List.html  mini_Data-Random-RVar.html  mini_Data-Random-Source-DevRandom.html  mini_Data-Random-Source-Std.html  mini_Data-Random.html  random-fu.haddock
random-fu/doc/haddock/src/: Data-Random-Distribution-Beta.html  Data-Random-Distribution-Binomial.html  Data-Random-Distribution-Dirichlet.html  Data-Random-Distribution-Gamma.html  Data-Random-Distribution-Multinomial.html  Data-Random-Distribution-Normal.html  Data-Random-Distribution-Poisson.html  Data-Random-Distribution-Uniform.html  Data-Random-Internal-Find.html  Data-Random-Internal-Fixed.html  Data-Random-Internal-Primitives.html  Data-Random-Internal-TH.html  Data-Random-Source-PureMT.html  Data-Random-Source.html
random-fu/src/Data/: Random.hs
random-fu/src/Data/Random/: Distribution.hs  Lift.hs  List.hs  RVar.hs  Sample.hs  Source.hs  Vector.hs
random-fu/src/Data/Random/Distribution/: Bernoulli.hs  Beta.hs  Binomial.hs  Categorical.hs  ChiSquare.hs  Dirichlet.hs  Exponential.hs  F.hs  Gamma.hs  Multinomial.hs  Normal.hs  Pareto.hs  Poisson.hs  Rayleigh.hs  Simplex.hs  StretchedExponential.hs  T.hs  Triangular.hs  Uniform.hs  Weibull.hs  Ziggurat.hs
random-fu/src/Data/Random/Internal/: Find.hs  Fixed.hs  Primitives.hs  TH.hs  Words.hs
random-fu/src/Data/Random/Source/: MWC.hs  StdGen.hs
random-fu/src/Test/: ChiSquare.hs  Hist.hs
random-source/: README.md  changelog.md  default.nix  random-source.cabal  stack.yaml
random-source/src/Data/Random/: Source.hs
random-source/src/Data/Random/Internal/: Prim.hs  Source.hs  TH.hs  Words.hs
random-source/src/Data/Random/Source/: DevRandom.hs  IO.hs  MWC.hs  Prim.hs  PureMT.hs  RandomGen.hs  Std.hs  StdGen.hs  TH.hs
random-source/src/Data/Random/Source/Internal/: Prim.hs  Source.hs  TH.hs  Words.hs
rvar/: changelog.md  default.nix  rvar.cabal
rvar/src/Data/: RVar.hs
rvar/src/Data/RVar/: Lift.hs  Prim.hs
rvar/src/Data/RVar/Internal/: Primitives.hs  Words.hs
src/Control/Monad/: RandomFu.hs
src/Data/: Random.hs
src/Data/Random/: Distribution.hs  Distribution.hs-boot  Lift.hs  List.hs  RVar.hs  RVar.hs-boot  Sample.hs  Source.hs
src/Data/Random/Distribution/: Bernoulli.hs  Beta.hs  Binomial.hs  Categorical.hs  ChiSquare.hs  Dirichlet.hs  Discrete.hs  Exponential.hs  F.hs  Gamma.hs  Multinomial.hs  Normal.hs  Poisson.hs  Rayleigh.hs  Triangular.hs  Uniform.hs  Weibull.hs  Ziggurat.hs
src/Data/Random/Distribution/Uniform/: Internal.hs
src/Data/Random/Internal/: Classification.hs  Find.hs  Fixed.hs  Primitives.hs  TH.hs  Words.hs
src/Data/Random/Source/: DevRandom.hs  MWC.hs  Old.hs  PreFetch.hs  PureMT.hs  Std.hs  StdGen.hs
src/Test/: ChiSquare.hs  Hist.hs  Shuffle.hs
tests/diehard/: tests.txt
tests/diehard/Test/DieHard/: Birthday.hs
tests/speed/: Bench.hs  TestSupport.hs  default.nix  speed-tests.cabal
