name:                   random-source
version:                0.3
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               https://github.com/mokus0/random-fu

category:               Math
synopsis:               Generic basis for random number generators
description:            Random number generation based on entropy sources
                        able to produce a small but well-defined set of
                        primitive variates.  Also includes facilities for
                        \"completing\" partial implementations, making it
                        easy to define new entropy sources.


Flag mtl2
    Description:        mtl-2 has State, etc., as "type" rather than "newtype"

Library
  ghc-options:          -Wall
  hs-source-dirs:       src
  exposed-modules:      Data.Random.Source
                        Data.Random.Source.IO
                        Data.Random.Source.MWC
                        Data.Random.Source.PureMT
                        Data.Random.Source.Std
                        Data.Random.Source.StdGen
                        Data.Random.Internal.Words
                        Data.Random.Internal.Source
  other-modules:        Data.Random.Internal.Prim
                        Data.Random.Internal.TH
    
  if flag(mtl2)
    build-depends:      mtl == 2.*
    cpp-options:        -DMTL2
  else
    build-depends:      mtl == 1.*
  
  build-depends:        base >= 4 && <5,
                        flexible-defaults,
                        mersenne-random-pure64,
                        mwc-random,
                        random,
                        stateref >= 0.3 && < 0.4,
                        syb,
                        template-haskell

  if os(Windows)
    cpp-options:        -Dwindows
    build-depends:      erf-native
  else
    build-depends:      erf
    exposed-modules:    Data.Random.Source.DevRandom
